@@ -1,0 +1,59 @@
+{
+  "name": "jambagecom/fh-debug",
+  "type": "typo3-cms-extension",
+  "description": "PHP debugger, sys_log and devLog Logger",
+  "license": "GPL-2.0+",
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "https://composer.typo3.org"
+    }
+  ],
+  "keywords": [
+    "TYPO3 CMS",
+    "debug",
+    "devlog",
+    "syslog",
+    "oops",
+    "error"
+  ],
+  "support": {
+    "issues": "https://github.com/franzholz/fh_debug/issues"
+  },
+  "homepage": "https://jambage.com",
+  "authors": [
+    {
+      "name": "Franz Holzinger",
+      "role": "Developer",
+      "homepage": "http://ttproducts.de"
+    }
+  ],
+  "replace": {
+    "fh_debug": "self.version",
+    "typo3-ter/fh-debug": "self.version"
+  },
+  "require": {
+    "php": ">=5.3.3",
+    "typo3/cms-core": ">=6.0,<9.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "JambageCom\\FhDebug\\": "Classes/"
+    }
+  },
+  "config": {
+    "vendor-dir": ".Build/vendor",
+    "bin-dir": ".Build/bin",
+    "preferred-install": {
+      "typo3/cms": "source",
+      "typo3/cms-core": "source",
+      "*": "dist"
+    }
+  },
+  "extra": {
+    "typo3/cms": {
+      "cms-package-dir": "{$vendor-dir}/typo3/cms",
+      "web-dir": ".Build/Web"
+    }
+  }
+}
